[package]
name = "yaz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.2.1"
cursive = "0.20.0"
itertools = "0.10.5"
ropey = "1.6.0"
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"
macros = { path = "macros" }
rust-fuzzy-search = "0.1.1"
syntect = "5.0.0"
